# LifePlanApp

./: .env.example  .gitignore  .prettierignore  .stylelintrc.cjs  README.md  SETUP.md  eslint.config.js  index.html  login.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
docs/: CODING_CHECKS.md  CSS_NAMING_CONVENTIONS.md  REFACTOR_CSS_PLAN.md  STYLE_CODING_RULES.md  TAURI_BUILD_WINDOWS.md
public/data/: ACCOUNT.csv  ACCOUNT_HISTORY.csv  ACCOUNT_PERMISSION.csv  CATEGORY.csv  COLOR_PALETTE.csv  TAG.csv  TAG_MANAGEMENT.csv  TRANSACTION.csv  TRANSACTION_MANAGEMENT.csv  TRANSACTION_MONTHLY.csv  TRANSACTION_TAG.csv  USER.csv
public/docs/: CSV_CACHE_STORAGE_FLOW.md  DATA_CSV.md
scripts/: add-defender-exclusion.ps1  download-cargo-tools.ps1  generate-custom-icons-json.js  install-cargo-tools.cmd  run-add-defender-exclusion.bat
server/: index.js  index.mjs
src/: login.ts  main.ts  state.ts  types.ts
src-tauri/: Cargo.toml  clippy.toml  deny.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: palette.ts  screen.ts  sidebar.ts
src/constants/: colorPresets.ts  index.ts
src/screens/: account-screen.ts  calendar-screen.ts  category-screen.ts  design-screen.ts  home-screen.ts  login-screen.ts  profile-screen.ts  schedule-screen.ts  system-screen.ts  tag-screen.ts  transaction-analysis-screen.ts  transaction-entry-screen.ts  transaction-history-screen.ts
(+48 files in other folders)
