[package]
name = "life-plan-gant"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"
license = "MIT"

[lib]
name = "life_plan_gant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
